@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.10.20-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-10-20 09:05:29, took 00:17:23, with 50 workers, on 4054 cases, 1 failed, 0 traces, 8 retries<br/>
+tested: 2025-10-20 10:19:14, took 00:13:59, with 50 workers, on 4054 cases, 0 failed, 0 traces, 3 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -83,7 +83,7 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-dhcp01.tst">conn-dhcp01.tst</a></td><td>success</td><td>dhcp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-dhcp02.tst">conn-dhcp02.tst</a></td><td>success</td><td>dhcp with arp/nd security</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-dhcp03.tst">conn-dhcp03.tst</a></td><td>success</td><td>dhcp with static allocation</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/conn-dhcp04.tst">conn-dhcp04.tst</a></td><td>#6-run-r3 tping 100 20 1234::1 vrf v1</td><td>dhcp with excluded address</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-dhcp04.tst">conn-dhcp04.tst</a></td><td>success</td><td>dhcp with excluded address</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-dhcp05.tst">conn-dhcp05.tst</a></td><td>success</td><td>dhcp with upgraded server</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-dhcp06.tst">conn-dhcp06.tst</a></td><td>success</td><td>dhcp with interface server</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-dhcp07.tst">conn-dhcp07.tst</a></td><td>success</td><td>dhcp relay</td></tr>
