@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v25.10.20-cur, done by sprscc13@mrn0b0dy.
--;-;-;2025-10-20 09:21:33, took 00:15:39, with 50 workers, on 844 cases, 0 failed, 0 traces, 0 retries
+-;-;-;2025-10-20 10:36:21, took 00:16:41, with 50 workers, on 844 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin, udp
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
