@@ -17603,3 +17603,6 @@ qc pass: wireguard over asymmetric ports
 ---------------------------------- 2025-10-20 08:48:05 25.10.20
 no qc pass: dhcp with excluded address
 failed: dhcp with excluded address
+---------------------------------- 2025-10-20 10:05:15 25.10.20
+no failed: dhcp with excluded address
+qc pass: dhcp with excluded address
